IE fixes; hide horizontal scrollbar in pulldown; Add shortcode media btn + removed shortcode meta box (Brandon)

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -86,3 +86,7 @@ select[id*="_default_font"] option[value="Helvetica Neue Bold"] { font-family: "
 /* Hide blockquote tinymce button. Use [blockquote] shortcode instead. */
 #content_blockquote { display: none; }
 
+/* Shortcode modal */
+.shortcode-section {
+    display: none;
+}
