--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ p.caption {font-family:"Helvetica Neue",Helvetica,sans-serif;font-size:12px;}
 	width: 100%;
 	margin-left: 0;
 	margin-bottom: 0;
-	padding-bottom: 10px;
+	padding-bottom: 30px;
 	display: block;
 	overflow-x: scroll;
 	white-space: nowrap;
@@ -522,7 +522,7 @@ article.story-default .social { float: right; }
  * Subpages
  **************************/
 
-.subpage main { margin-top: 40px; margin-bottom: 40px; }
+.subpage main { display: block; margin-top: 40px; margin-bottom: 40px; }
 .subpage h1 {
 	font-family: Georgia, serif;
 	font-size: 36px;
